# bartender-backend

./: Cargo.toml  README.md  build.sh  postgres.yaml  prometheus.yaml  telemetry.yaml
migrations/2023-04-05-143609_create_categories_table/: down.sql  up.sql
migrations/2023-04-08-151908_create_initial_bartender/: down.sql  up.sql
migrations/2023-04-16-165500_make_cocktail_names_unique/: down.sql  up.sql
migrations/2023-04-25-133304_add_users/: up.sql
src/: auth.rs  main.rs  telemetry.rs
src/api/: api.rs  cocktails.rs  mod.rs  todos.rs  users.rs
src/models/: cocktails.rs  ingredients.rs  instructions.rs  mod.rs  todo.rs  users.rs
src/repository/: database.rs  schema.rs
