[package]
name = "bartender"
version = "0.1.0"
edition = "2021"

[profile.bench]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-web-opentelemetry = { version = "0.13.0", features = ["opentelemetry-prometheus", "metrics", "metrics-prometheus", "prometheus"] }
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_filter_query = { version = "1.0.0", features = ["actix"] }
diesel_filter = { version = "1.0.2", features = ["actix", "pagination", "serialize"] }
dotenv = "0.15.0"
serde = { version = "1.0.159", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
openai_api_rust = "0.1.8"
serde_json = "1.0.96"
actix-web-httpauth = "0.8.0"
